Change html code

--- a/account/cart.html
+++ b/account/cart.html
@@ -94,14 +94,13 @@
 							<th style="width:10%">Price</th>
 							<th style="width:8%">Quantity</th>
 							<th style="width:22%" class="text-center">Subtotal</th>
-							<th style="width:10%"></th>
 						</tr>
 					</thead>
 					<tbody>
 						<tr>
 							<td data-th="Product">
 								<div class="row">
-									<div class="col-sm-2 hidden-xs"><img src="../image/cart/cart-1.jpg" class="img-responsive" /></div>
+									<div class="col-sm-2"><img src="../image/cart/cart-1.jpg" class="img-responsive" /></div>
 									<div class="col-sm-10">
 										<h4 class="nomargin">Galaxy Book</h4>
 										<p>Samsung Galaxy Book 10.6” Windows 2-in-1 PC (Wi-Fi) Silver, 4GB RAM/128GB storage, SM-W620NZKAXAR.</p>
@@ -113,14 +112,11 @@
 								<input type="number" class="form-control text-center" value="1">
 							</td>
 							<td data-th="Subtotal" class="text-center">$999.99</td>
-							<td class="actions" data-th="">
-								<button type="button" class="close" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-							</td>
 						</tr>
 						<tr>
 							<td data-th="Product">
 								<div class="row">
-									<div class="col-sm-2 hidden-xs"><img src="../image/cart/cart-2.jpg" class="img-responsive" /></div>
+									<div class="col-sm-2"><img src="../image/cart/cart-2.jpg" class="img-responsive" /></div>
 									<div class="col-sm-10">
 										<h4 class="nomargin">Galaxy Note8</h4>
 										<p>Samsung SM-N950UZVAXAA Galaxy Note8 (US Version) Factory Unlocked Phone - 6.3" Screen - 64GB - Orchid Gray.</p>
@@ -132,14 +128,11 @@
 								<input type="number" class="form-control text-center" value="1">
 							</td>
 							<td data-th="Subtotal" class="text-center">$729.99</td>
-							<td class="actions" data-th="">
-								<button type="button" class="close" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-							</td>
 						</tr>
 						<tr>
 							<td data-th="Product">
 								<div class="row">
-									<div class="col-sm-2 hidden-xs"><img src="../image/cart/cart-3.jpg" class="img-responsive" /></div>
+									<div class="col-sm-2"><img src="../image/cart/cart-3.jpg" class="img-responsive" /></div>
 									<div class="col-sm-10">
 										<h4 class="nomargin">Gear S3 Frontier</h4>
 										<p>Samsung Gear S3 Frontier Smartwatch (Bluetooth), SM-R760NDAAXAR – US Version with Warranty.</p>
@@ -151,17 +144,14 @@
 								<input type="number" class="form-control text-center" value="1">
 							</td>
 							<td data-th="Subtotal" class="text-center">$199.99</td>
-							<td class="actions" data-th="">
-								<button type="button" class="close" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-							</td>
 						</tr>
 						<tr>
 							<td data-th="Product">
 								<div class="row">
-									<div class="col-sm-2 hidden-xs"><img src="../image/cart/cart-4.jpg" class="img-responsive" /></div>
+									<div class="col-sm-2"><img src="../image/cart/cart-4.jpg" class="img-responsive" /></div>
 									<div class="col-sm-10">
 										<h4 class="nomargin">Gear IconX</h4>
-										<p>Samsung Gear IconX (2018 Edition) Bluetooth Cord-free Fitness Earbuds, w/ On-board 4Gb MP3 Player - Black.</p>
+										<p>Samsung Gear IconX (2018 Edition) Bluetooth Cord-free Fitness Earbuds, On-board 4Gb MP3 Player - Black.</p>
 									</div>
 								</div>
 							</td>
@@ -170,19 +160,12 @@
 								<input type="number" class="form-control text-center" value="1">
 							</td>
 							<td data-th="Subtotal" class="text-center">$179.99</td>
-							<td class="actions" data-th="">
-								<button type="button" class="close" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-							</td>
 						</tr>
 						</tbody>
 					<tfoot>
-						<tr class="visible-xs">
-							<td class="text-center"><strong>Total $2109.96</strong></td>
-						</tr>
 						<tr>
-							<td><a href="#" class="btn btn-secondary"><i class="fa fa-angle-left"></i> Continue Shopping</a></td>
-							<td colspan="2" class="hidden-xs"></td>
-							<td class="hidden-xs text-center"><strong>Total $2109.96</strong></td>
+							<td colspan="2"></td>
+							<td class="text-center"><strong>Total $2109.96</strong></td>
 							<td><a href="#" class="btn btn-primary btn-block">Checkout <i class="fa fa-angle-right"></i></a></td>
 						</tr>
 					</tfoot>
