--- a/account/register.html
+++ b/account/register.html
@@ -87,7 +87,7 @@
 		
 		<main>
 		<fieldset class="border rounded reg-form">
-			<h3>Register</h3>
+			<h3 class="reg-title">Register</h3>
 				<form>
 					<div class="form-row">
 						<div class ="form-group col-md-4">
