--- a/index.html
+++ b/index.html
@@ -113,20 +113,20 @@
 				</a>
 			</div>
 			
-			<h3>Galaxy Discover</h3>
-			<div class="row index-discover" style="margin: 5px;">
-				<div class="col-4">
-					<iframe width="400" height="225" src="https://www.youtube.com/embed/6z6FgdVKXFM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<h3 class="h3-index">Galaxy Discover</h3>
+			<div class="row" style="margin: 0;">
+				<div class="col-4 embed-responsive embed-responsive-16by9">
+					<iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/6z6FgdVKXFM?rel=0?showinfo=0" frameborder="0" allowfullscreen></iframe>
 				</div>
-				<div class="col-4">
-					<iframe width="400" height="225" src="https://www.youtube.com/embed/HNdOPzcD3wI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<div class="col-4 embed-responsive embed-responsive-16by9">
+					<iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/HNdOPzcD3wI?rel=0?showinfo=0" frameborder="0" allowfullscreen></iframe>
 				</div>
-				<div class="col-4">
-					<iframe width="400" height="225" src="https://www.youtube.com/embed/rjaL94yEJME" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<div class="col-4  embed-responsive embed-responsive-16by9">
+					<iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/rjaL94yEJME?rel=0?showinfo=0" frameborder="0" allowfullscreen></iframe>
 				</div>
 			</div>
 			
-			<h3>Devices</h3>
+			<h3 class="h3-index">Devices</h3>
 		</main>
 		
 		<footer class="page-footer font-small copyright">
