--- a/account/cart.html
+++ b/account/cart.html
@@ -92,8 +92,8 @@
 						<tr>
 							<th style="width:50%">Product</th>
 							<th style="width:10%">Price</th>
-							<th style="width:8%">Quantity</th>
-							<th style="width:22%" class="text-center">Subtotal</th>
+							<th style="width:5%" class="text-center">Quantity</th>
+							<th style="width:15%" class="text-center">Subtotal</th>
 						</tr>
 					</thead>
 					<tbody>
@@ -166,7 +166,7 @@
 						<tr>
 							<td colspan="2"></td>
 							<td class="text-center"><strong>Total $2109.96</strong></td>
-							<td><a href="#" class="btn btn-primary btn-block">Checkout <i class="fa fa-angle-right"></i></a></td>
+							<td><a href="#" class="btn btn-primary btn-block">Checkout</a></td>
 						</tr>
 					</tfoot>
 				</table>
