--- a/news.html
+++ b/news.html
@@ -15,7 +15,7 @@
 		<header>
 			<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
 				<a class="navbar-brand" href="index.html"><b>SAMfan Shop</b></a>
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent">
 					<span class="navbar-toggler-icon"></span>
 				</button>
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -86,47 +86,7 @@
 		</header>
 		
 		<main>		
-			<div id="carousel" class="carousel slide" data-ride="carousel">
-				<ol class="carousel-indicators">
-					<li data-target="#carousel" data-slide-to="0" class="active"></li>
-					<li data-target="#carousel" data-slide-to="1"></li>
-					<li data-target="#carousel" data-slide-to="2"></li>
-				</ol>
-				<div class="carousel-inner">
-					<div class="carousel-item active">
-						<img class="d-block w-100" src="image/index/banner-1.jpg" alt="Galaxy A9 2018">
-					</div>
-					<div class="carousel-item">
-						<img class="d-block w-100" src="image/index/banner-2.jpg" alt="Be Together">
-					</div>
-					<div class="carousel-item">
-						<img class="d-block w-100" src="image/index/banner-3.jpg" alt="Galaxy Note9">
-					</div>
-				</div>
-				<a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
-					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-					<span class="sr-only">Previous</span>
-				</a>
-				<a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
-					<span class="carousel-control-next-icon" aria-hidden="true"></span>
-					<span class="sr-only">Next</span>
-				</a>
-			</div>
-			
-			<h3 class="h3-index">Galaxy Discover</h3>
-			<div class="row" style="margin: 0;">
-				<div class="col-4 embed-responsive embed-responsive-16by9">
-					<iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/6z6FgdVKXFM" frameborder="0" allowfullscreen></iframe>
-				</div>
-				<div class="col-4 embed-responsive embed-responsive-16by9">
-					<iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/HNdOPzcD3wI" frameborder="0" allowfullscreen></iframe>
-				</div>
-				<div class="col-4  embed-responsive embed-responsive-16by9">
-					<iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/rjaL94yEJME" frameborder="0" allowfullscreen></iframe>
-				</div>
-			</div>
-			
-			<h3 class="h3-index">Devices</h3>
+
 		</main>
 		
 		<footer class="page-footer font-small copyright">
