--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
 		</header>
 		
 		<main>		
-			<div id="carousel" class="carousel slide" data-ride="carousel">
+			<div id="image" class="carousel slide" data-ride="carousel">
 				<ol class="carousel-indicators">
-					<li data-target="#carousel" data-slide-to="0" class="active"></li>
-					<li data-target="#carousel" data-slide-to="1"></li>
-					<li data-target="#carousel" data-slide-to="2"></li>
+					<li data-target="#image" data-slide-to="0" class="active"></li>
+					<li data-target="#image" data-slide-to="1"></li>
+					<li data-target="#image" data-slide-to="2"></li>
 				</ol>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
@@ -103,6 +103,36 @@
 						<img class="d-block w-100" src="image/index/banner-3.jpg" alt="Galaxy Note9">
 					</div>
 				</div>
+				<a class="carousel-control-prev" href="#image" role="button" data-slide="prev">
+					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					<span class="sr-only">Previous</span>
+				</a>
+				<a class="carousel-control-next" href="#image" role="button" data-slide="next">
+					<span class="carousel-control-next-icon" aria-hidden="true"></span>
+					<span class="sr-only">Next</span>
+				</a>
+			</div>
+			
+			<h3 class="h3-index">Galaxy Discover</h3>
+			
+			<div class="d-sm-none">
+				<div id="carousel" class="carousel slide text-center" data-ride="carousel">
+				<ol class="carousel-indicators">
+					<li data-target="#carousel" data-slide-to="0" class="active"></li>
+					<li data-target="#carousel" data-slide-to="1"></li>
+					<li data-target="#carousel" data-slide-to="2"></li>
+				</ol>
+				<div class="carousel-inner">
+					<div class="carousel-item active">
+						<iframe class="embed-responsive-item" width="400" height="225" src="https://www.youtube.com/embed/6z6FgdVKXFM" frameborder="0" allowfullscreen></iframe>
+					</div>
+					<div class="carousel-item">
+						<iframe class="embed-responsive-item" width="400" height="225" src="https://www.youtube.com/embed/HNdOPzcD3wI" frameborder="0" allowfullscreen></iframe>
+					</div>
+					<div class="carousel-item">
+						<iframe class="embed-responsive-item" width="400" height="225" src="https://www.youtube.com/embed/rjaL94yEJME" frameborder="0" allowfullscreen></iframe>
+					</div>
+				</div>
 				<a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
 					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
 					<span class="sr-only">Previous</span>
@@ -112,9 +142,8 @@
 					<span class="sr-only">Next</span>
 				</a>
 			</div>
-			
-			<h3 class="h3-index">Galaxy Discover</h3>
-			<div class="row" style="margin: 0;">
+			</div>
+			<div class="row d-sm-flex d-none" style="margin: 0;">
 				<div class="col-4 embed-responsive embed-responsive-16by9">
 					<iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/6z6FgdVKXFM" frameborder="0" allowfullscreen></iframe>
 				</div>
