--- a/account/cart.html
+++ b/account/cart.html
@@ -111,7 +111,7 @@
 							<td data-th="Quantity">
 								<input type="number" class="form-control text-center" value="1">
 							</td>
-							<td data-th="Subtotal" class="text-center">$999.99</td>
+							<td data-th="Subtotal" class="subtotal text-center">$999.99</td>
 						</tr>
 						<tr>
 							<td data-th="Product">
@@ -127,7 +127,7 @@
 							<td data-th="Quantity">
 								<input type="number" class="form-control text-center" value="1">
 							</td>
-							<td data-th="Subtotal" class="text-center">$729.99</td>
+							<td data-th="Subtotal" class="subtotal text-center">$729.99</td>
 						</tr>
 						<tr>
 							<td data-th="Product">
@@ -143,7 +143,7 @@
 							<td data-th="Quantity">
 								<input type="number" class="form-control text-center" value="1">
 							</td>
-							<td data-th="Subtotal" class="text-center">$199.99</td>
+							<td data-th="Subtotal" class="subtotal text-center">$199.99</td>
 						</tr>
 						<tr>
 							<td data-th="Product">
@@ -159,7 +159,8 @@
 							<td data-th="Quantity">
 								<input type="number" class="form-control text-center" value="1">
 							</td>
-							<td data-th="Subtotal" class="text-center">$179.99</td>
+							<td data-th="Subtotal" class="subtotal text-center">$179.99</td>
+							
 						</tr>
 						</tbody>
 					<tfoot>
