--- a/account/cart.html
+++ b/account/cart.html
@@ -111,7 +111,7 @@
 										<h4>Galaxy Book</h4>
 										<p class="d-sm-block d-none">Samsung Galaxy Book 10.6” Windows 2-in-1 PC (Wi-Fi) Silver, 4GB RAM/128GB storage, SM-W620NZKAXAR.</p>
 										<p class="tab-info d-sm-none"><a data-toggle="collapse" href="#info-1">Information</a></p>
-										<div class="collapse" id="info-1">Samsung Galaxy Book 10.6” Windows 2-in-1 PC (Wi-Fi) Silver, 4GB RAM/128GB storage, SM-W620NZKAXAR.</div>
+										<div class="collapse d-sm-none" id="info-1">Samsung Galaxy Book 10.6” Windows 2-in-1 PC (Wi-Fi) Silver, 4GB RAM/128GB storage, SM-W620NZKAXAR.</div>
 									</div>
 								</div>
 							</td>
@@ -129,7 +129,7 @@
 										<h4>Galaxy Note8</h4>
 										<p class="d-sm-block d-none">Samsung SM-N950UZVAXAA Galaxy Note8 (US Version) Factory Unlocked Phone - 6.3" Screen - 64GB - Orchid Gray.</p>
 										<p class="tab-info d-sm-none"><a data-toggle="collapse" href="#info-2">Information</a></p>
-										<div class="collapse" id="info-2">Samsung SM-N950UZVAXAA Galaxy Note8 (US Version) Factory Unlocked Phone - 6.3" Screen - 64GB - Orchid Gray.</div>
+										<div class="collapse d-sm-none" id="info-2">Samsung SM-N950UZVAXAA Galaxy Note8 (US Version) Factory Unlocked Phone - 6.3" Screen - 64GB - Orchid Gray.</div>
 									</div>
 								</div>
 							</td>
@@ -147,7 +147,7 @@
 										<h4>Gear S3 Frontier</h4>
 										<p class="d-sm-block d-none">Samsung Gear S3 Frontier Smartwatch (Bluetooth), SM-R760NDAAXAR – US Version with Warranty.</p>
 										<p class="tab-info d-sm-none"><a data-toggle="collapse" href="#info-3">Information</a></p>
-										<div class="collapse" id="info-3">Samsung Gear S3 Frontier Smartwatch (Bluetooth), SM-R760NDAAXAR – US Version with Warranty.</div>
+										<div class="collapse d-sm-none" id="info-3">Samsung Gear S3 Frontier Smartwatch (Bluetooth), SM-R760NDAAXAR – US Version with Warranty.</div>
 									</div>
 								</div>
 							</td>
@@ -165,7 +165,7 @@
 										<h4>Gear IconX</h4>
 										<p class="d-sm-block d-none">Samsung Gear IconX (2018 Edition) Bluetooth Cord-free Fitness Earbuds, On-board 4Gb MP3 Player - Black.</p>
 										<p class="tab-info d-sm-none"><a data-toggle="collapse" href="#info-4">Information</a></p>
-										<div class="collapse" id="info-4">Samsung Gear IconX (2018 Edition) Bluetooth Cord-free Fitness Earbuds, On-board 4Gb MP3 Player - Black.</div>
+										<div class="collapse d-sm-none" id="info-4">Samsung Gear IconX (2018 Edition) Bluetooth Cord-free Fitness Earbuds, On-board 4Gb MP3 Player - Black.</div>
 									</div>
 								</div>
 							</td>
@@ -189,7 +189,7 @@
 		</main>
 		
 		<footer class="page-footer font-small copyright">
-			<div class="footer-copyright text-center py-3 bg-dark">© 2019 Copyright: <a href="https://www.facebook.com/ithgnm">Huy Nguyen Minh</a></div>
+			<div class="footer-copyright text-center py-2 bg-dark">© 2019 Copyright: <a href="https://www.facebook.com/ithgnm">Huy Nguyen Minh</a></div>
 		</footer>
 		
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
