--- a/device/phone.html
+++ b/device/phone.html
@@ -309,14 +309,32 @@
 							</div>
 						</div>
 					</div>
+					<div class="col-12 col-sm-6 col-md-4 col-lg-3">
+						<div class="card" style="max-width: 20rem;">
+							<img src="../image/device/a7.png" class="card-img-top" alt="Galaxy A7">
+							<div class="card-body">
+								<h5 class="card-title">Galaxy A7 2018</h5>
+								<h6 class="card-price">$ 319.99</h6>
+								<ul class="list-group">
+									<li>Screen: 6.0 inches</li>
+									<li>CPU: Octa-core 2.2 GHz</li>
+									<li>RAM: 4GB, ROM: 64GB</li>
+									<li>Camera: 14, 8, 5 MP</li>
+									<li>Battery: 3300mAh</li>
+								</ul>
+								<a href="#" class="btn btn-secondary" style="margin-top: 10px">Add to cart</a>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</main>
 		
 		<footer class="page-footer font-small copyright">
-			<div class="footer-copyright text-center py-3 bg-dark">© 2019 Copyright: <a href="https://www.facebook.com/ithgnm">Huy Nguyen Minh</a></div>
+			<div class="footer-copyright text-center py-2 bg-dark">© 2019 Copyright: <a href="https://www.facebook.com/ithgnm">Huy Nguyen Minh</a></div>
 		</footer>
 		
+		<script src="../js/script.js"></script>
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
