--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 		
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	
+		<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+		
 		<title>SAMfan Shop</title>	
 		<link rel="shortcut icon" href="samfan.ico">
 	</head>
@@ -120,7 +121,6 @@
 			</div>
 			
 			<h3 class="h3-index">Galaxy Discover</h3>
-			
 			<div class="d-sm-none">
 				<div id="carousel" class="carousel slide text-center" data-ride="carousel">
 				<ol class="carousel-indicators">
@@ -160,14 +160,33 @@
 					<iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/rjaL94yEJME" frameborder="0" allowfullscreen></iframe>
 				</div>
 			</div>
+			
+			<div class="container" style="margin-bottom: 30px">
+				<h3 class="h3-index">Search</h3>
+				<div class="row">
+					<div class="col-1"></div>
+					<div class="col-10">
+						<div class="input-group">
+							<input class="form-control border-secondary py-2" type="search" placeholder="search">
+							<div class="input-group-append">
+								<button class="btn btn-outline-secondary" type="button">
+									<i class="fa fa-search"></i>
+								</button>
+							</div>
+						</div>
+					</div>
+					<div class="col-1"></div>
+				</div>
+			</div>			
 		</main>
 		
 		<footer class="page-footer font-small copyright">
-			<div class="footer-copyright text-center py-3 bg-dark">© 2019 Copyright: <a href="https://www.facebook.com/ithgnm">Huy Nguyen Minh</a></div>
+			<div class="footer-copyright text-center py-2 bg-dark">© 2019 Copyright: <a href="https://www.facebook.com/ithgnm">Huy Nguyen Minh</div>
 		</footer>
 		
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+		
 	</body>
 </html>
