--- a/account/login.html
+++ b/account/login.html
@@ -96,64 +96,26 @@
 		
 		<main>
 		<fieldset class="border rounded reg-form">
-			<h3 class="reg-title">Register</h3>
-				<form>
-					<div class="form-row">
-						<div class ="form-group col-md-4">
-							<label>First Name</label>
-							<input type="text" class="form-control" placeholder="Huy" required>
-						</div>
-						<div class ="form-group col-md-5">
-							<label>Last Name</label>
-							<input type="text" class="form-control" placeholder="Nguyen Minh" required>
-						</div>
-						<div class ="form-group col-md-3">
-							<label>Gender</label>
-							<select class="form-control">
-								<option select>Male</option>
-								<option>Female</option>
-							</select>
-						</div>
-						<div class="form-group col-md-6">
-							<label>Email</label>
-							<input type="email" class="form-control" placeholder="huynm17@uef.edu.vn" required autofocus>
-						</div>
-						<div class="form-group col-md-6">
-							<label>Password</label>
-							<input type="password" class="form-control" required>
-						</div>
-					</div>
-					<div class="form-group">
-						<label>Address</label>
-						<input type="text" class="form-control" required>
-					</div>
-					<div class="form-row">
-						<div class="form-group col-md-5">
-							<label>City</label>
-							<input type="text" class="form-control" required>
-						</div>
-						<div class="form-group col-md-4">
-							<label>State</label>
-							<select class="form-control">
-								<option select>Vietnam</option>
-								<option>United States</option>
-							</select>
-						</div>
-						<div class="form-group col-md-3">
-							<label>Zip</label>
-							<input type="text" class="form-control" required>
-						</div>
-					</div>
-					<div class="form-group">
-						<div class="form-check">
-							<input class="form-check-input" type="checkbox" required>
-							<label class="form-check-label">I agree to the <a href="#">Terms of Use</a>.</label>
-						</div>
-					</div>
-					<div class="text-center">
-						<button type="submit" class="btn btn-secondary signup">Sign Up</button>
-					</div>
-				</form>
+			<h3>Login</h3>
+				<form class="px-4 py-3">
+									<div class="form-group">
+										<label for="login-email">Email address</label>
+										<input type="email" id="login-email" class="form-control" placeholder="email@example.com" required autofocus>
+									</div>
+									<div class="form-group">
+										<label for="login-password">Password</label>
+										<input type="password" id="login-password" class="form-control" placeholder="Password" required>
+									</div>
+									<div class="form-group form-check">
+										<input type="checkbox" class="form-check-input" id="exampleCheck1">
+										<label class="form-check-label" for="exampleCheck1">Remember me</label>
+									</div>
+									<div class="text-center">
+										<button type="submit" class="btn btn-secondary">Sign in</button>
+									</div>
+								</form>
+								<div class="dropdown-divider"></div>
+								<a class="dropdown-item" href="register.html"><em>Dont have an account? Register</em></a>
 			</fieldset>
 		</main>
 		
