--- a/device/tablet.html
+++ b/device/tablet.html
@@ -169,7 +169,7 @@
 				</div>
 			</div>
 			<div class="container device-info">
-				<h4 id="book">Galaxy S series</h4>
+				<h4 id="book">Galaxy Book series</h4>
 				<div class="row">
 					
 				</div>
