--- a/account/cart.html
+++ b/account/cart.html
@@ -99,10 +99,11 @@
 				<table id="cart" class="table table-hover table-responsive">
 					<thead>
 						<tr>
-							<th scope="col" style="width:50%">Product</th>
+							<th scope="col" style="width:60%">Product</th>
 							<th scope="col" style="width:10%">Price</th>
 							<th scope="col" style="width:5%" class="text-center">Quantity</th>
 							<th scope="col" style="width:15%" class="text-center">Subtotal</th>
+							<th scope="col"></th>
 						</tr>
 					</thead>
 					<tbody>
@@ -123,6 +124,10 @@
 								<input type="number" class="form-control text-center" value="1">
 							</td>
 							<td data-th="Subtotal" class="text-center">$999.99</td>
+							<td class="text-center"> 
+								<a href="" class="btn btn-outline-success"><i class="fa fa-heart"></i></a> 
+								<a href="" class="btn btn-outline-danger"> <i class="fa fa-times"></i></a>
+							</td>
 						</tr>
 						<tr>
 							<td data-th="Product">
@@ -141,6 +146,11 @@
 								<input type="number" class="form-control text-center" value="1">
 							</td>
 							<td data-th="Subtotal" class="text-center">$729.99</td>
+							</td>
+							<td class="text-center"> 
+								<a href="" class="btn btn-outline-success"><i class="fa fa-heart"></i></a> 
+								<a href="" class="btn btn-outline-danger"> <i class="fa fa-times"></i></a>
+							</td>
 						</tr>
 						<tr>
 							<td data-th="Product">
@@ -159,6 +169,10 @@
 								<input type="number" class="form-control text-center" value="1">
 							</td>
 							<td data-th="Subtotal" class="text-center">$199.99</td>
+							<td class="text-center"> 
+								<a href="" class="btn btn-outline-success"><i class="fa fa-heart"></i></a> 
+								<a href="" class="btn btn-outline-danger"> <i class="fa fa-times"></i></a>
+							</td>
 						</tr>
 						<tr>
 							<td data-th="Product">
@@ -177,12 +191,16 @@
 								<input type="number" class="form-control text-center" value="1">
 							</td>
 							<td data-th="Subtotal" class="text-center">$179.99</td>
+							<td class="text-center"> 
+								<a href="" class="btn btn-outline-success"><i class="fa fa-heart"></i></a> 
+								<a href="" class="btn btn-outline-danger"> <i class="fa fa-times"></i></a>
+							</td>
 						</tr>
 					</tbody>	
 						
 					<tfoot>
 						<tr>
-							<td colspan="2"></td>
+							<td colspan="3"></td>
 							<td class="text-center"><strong>Total $2109.96</strong></td>
 							<td><a href="#" class="btn btn-primary btn-block">Checkout</a></td>
 						</tr>
