--- a/index.html
+++ b/index.html
@@ -140,7 +140,57 @@
 					<div class="col-1"></div>
 				</div>
 			</div>	
-			
+
+			<h3 class="h3-index">Latest News</h3>
+			<div class="container">
+				<div class="row mb-2">
+				    <div class="col-md-6">
+				    	<div class="row news-column">
+					    	<div class="col-4 text-center">
+						    	<img class="img-responsive" src="image/index/news-1.jpg">
+							</div>
+							<div class="col">
+								<h4>Phones</h4>
+								<p>Samsung may have accidentally leaked the Galaxy S10 design.</p>
+								<a href=""><h6>Read more...</h6></a>
+							</div>
+						</div>
+						<div class="row news-column">
+					    	<div class="col-4 text-center">
+						    	<img class="img-responsive" src="image/index/news-3.jpg">
+							</div>
+							<div class="col">
+								<h4>Phones</h4>
+								<p>Samsung isn’t changing its traditional branding with the Galaxy S10.</p>
+								<a href=""><h6>Read more...</h6></a>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6">
+				    	<div class="row news-column">
+					    	<div class="col-4 text-center">
+						    	<img class="img-responsive" src="image/index/news-2.jpg">
+							</div>
+							<div class="col">
+								<h4>Laptops</h4>
+								<p>New Samsung Notebook 9 Pro blends power and style with affordability.</p>
+								<a href=""><h6>Read more...</h6></a>
+							</div>
+						</div>
+						<div class="row news-column">
+					    	<div class="col-4 text-center">
+						    	<img class="img-responsive" src="image/index/news-4.jpg">
+							</div>
+							<div class="col">
+								<h4>Tablets</h4>
+								<p>Samsung officially confirms Galaxy Book 2 specs, price and release date.</p>
+								<a href=""><h6>Read more...</h6></a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
 			<h3 class="h3-index">Galaxy Discover</h3>
 			<div class="d-sm-none" style="margin: 30px">
 				<div id="carousel" class="carousel slide text-center" data-ride="carousel">
@@ -180,9 +230,7 @@
 				<div class="col-4  embed-responsive embed-responsive-16by9">
 					<iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/rjaL94yEJME" frameborder="0" allowfullscreen></iframe>
 				</div>
-			</div>
-			
-					
+			</div>	
 		</main>
 		
 		<footer class="page-footer font-small pt-3 bg-dark information">
