--- a/account/login.html
+++ b/account/login.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
-		<title>Register - SAMfan Shop</title>
+		<title>Login - SAMfan Shop</title>
 		<link rel="shortcut icon" href="../samfan.ico">
 	</head>
 	
@@ -112,6 +112,15 @@
 									</div>
 									<div class="text-center">
 										<button type="submit" class="btn btn-secondary">Sign in</button>
+									</div>
+									<hr class="my-4">
+									<div class="row">
+										<div class="col-sm-9 col-md-7 col-lg-6 mx-auto">
+											<button class="btn btn-block btn-google" type="submit"><i class="fab fa-google mr-2"></i> Sign in with Google</button>
+										</div>
+										<div class="col-sm-9 col-md-7 col-lg-6 mx-auto">
+											<button class="btn btn-block btn-facebook" type="submit"><i class="fab fa-facebook-f mr-2"></i> Sign in with Facebook</button>
+										</div>
 									</div>
 								</form>
 								<div class="dropdown-divider"></div>
