--- a/account/register.html
+++ b/account/register.html
@@ -153,6 +153,15 @@
 					<div class="text-center">
 						<button type="submit" class="btn btn-secondary signup">Sign Up</button>
 					</div>
+					<hr class="my-4">
+					<div class="row">
+						<div class="col-sm-9 col-md-7 col-lg-6 mx-auto">
+							<button class="btn btn-block btn-google" type="submit"><i class="fab fa-google mr-2"></i> Sign up with Google</button>
+						</div>
+						<div class="col-sm-9 col-md-7 col-lg-6 mx-auto">
+							<button class="btn btn-block btn-facebook" type="submit"><i class="fab fa-facebook-f mr-2"></i> Sign up with Facebook</button>
+						</div>
+					</div>
 				</form>
 			</fieldset>
 		</main>
